# battleship

./: .gitignore  .secrets.baseline  BACKLOG.md  NOTES.md  README.md  TECHDEBT.md  archive.tgz  main.py  project.tf  pyproject.toml  sonar-project.properties
.github/workflows/: python-deploy.yml  python-lint.yml  python-test.yml
scripts/: save.sh
src/: main.py
src/battleship/api/: __init__.py  api.py
src/battleship/cli/: __init__.py  util.py
src/battleship/logic/: __init__.py  constants.py  game.py  grid.py  player.py  util.py
src/minesweeper/: __init__.py
src/minesweeper/cli/: __init__.py  util.py
src/minesweeper/logic/: __init__.py  game.py
test/: game_test.py  grid_test.py  health_api_test.py  player_test.py  ship_placement_test.py  util_test.py
test/bdd/features/: game_start.feature  game_start_api.feature  health_check_api.feature  moves.feature  new_game.feature  ship_placement.feature  shots.feature  sunk_vessel.feature
test/bdd/steps/: game_start_api_test_steps.py  game_start_test_steps.py  health_check_api_test_steps.py  moves_test_steps.py  new_game_steps_test.py  ship_placement_test_steps.py  shots_test_steps.py  sunk_vessel_test_steps.py
